# ha-occupancy-tracker

./: .copilot-codeGeneration-instructions.md  .gitignore  LICENSE  README.md  THOUGHTS.md  config.yaml  hacs.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: hacs.yaml  pythonpackage.yaml
custom_components/occupancy_tracker/: __init__.py  anomaly_detector.py  button.py  config_validator.py  manifest.json  occupancy_system.py  occupancy_tracker.py  sensor.py
custom_components/occupancy_tracker/components/: anomaly_detector.py  area_state.py  sensor_adjacency_tracker.py  sensor_history_item.py  sensor_state.py  types.py  warning.py
src/: config_validator.py  occupancy_tracker.py  test_config_validator.py  test_occupancy_tracker.py
tests/: conftest.py  test_anomaly_detector.py  test_area_state.py  test_config_validator.py  test_occupancy_system.py  test_occupancy_tracker.py  test_sensor_adjacency_tracker.py  test_sensor_state.py  test_warning.py
tests/occupancy_tracker/: __init__.py  test_anomaly_detector.py  test_button.py  test_components.py  test_init.py  test_occupancy_tracker.py  test_sensor.py  test_sensor_adjacency_tracker.py
